kubernetes/apps/default/unifi/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app: unifi
spec:
  serviceName: unifi
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      serviceAccountName: unifi
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-network-application:9.0.108-ls76
          resources:
            requests:
              memory: '56Mi'
              cpu: '100m'
            limits:
              memory: '1500Mi'
              cpu: '512m'
          imagePullPolicy: IfNotPresent
          ports:
            - name: device-comm
              containerPort: 8080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: default-console
              containerPort: 8443
              protocol: TCP
            - name: secure-redirect
              containerPort: 8843
              protocol: TCP
            - name: http-redirect
              containerPort: 8880
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: unifi-disc
              containerPort: 10001
              protocol: UDP
            - name: unifi-disc-l2
              containerPort: 1900
              protocol: UDP
            - name: syslog
              containerPort: 5514
              protocol: UDP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: unifi-data
              mountPath: /config
              readOnly: false
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi
